# combisurf

./: .gitignore  pyproject.toml
combisurf/: __init__.py  conjugate_tree.py  free_group.pyx  geometric_intersection.py  misc.pxd  misc.pyx  morphism.py  oriented_map.py  partial_sums.py  permutation.pyx  quad_system.py  walk.py  word.pyx
doc/: conf.py  index.rst  oriented_map.rst  permutation.rst
test/: test_conjugate_tree.py  test_free_group.py  test_geometric_intersection.py  test_oriented_map.py  test_partial_sums.py  test_permutation.py  test_word.py
topsurf/: oriented_map.py  planar_layout.py  quad_system.py
